@@ -1,3 +1,14 @@
+2004-12-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR debug/16261
+	Backport from mainline:
+	2004-01-27  Devang Patel  <dpatel@apple.com>
+	
+	* dwarf2out.c: (remove_child_TAG): New function.
+	(gen_subprogram_die): Do not remove all children dies while reusing
+	declaration die for definition.  Instead, selectively remove only formal
+	parameters.
+
 2005-01-02  Roger Sayle  <roger@eyesopen.com>
 	    Andrew Pinski  <pinskia@physics.uc.edu>
 	    James E. Wilson  <wilson@specifixinc.com>
